# tulisp

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: fib.rs  list_build.rs
benches/common/: mod.rs
docs/: tco.md
examples/: README.md  callbacks.rs  embed_rust_type.rs  fib-fast.lisp  fib-tail.lisp  fib.lisp  fizz-buzz.lisp  hello.rs  lists.lisp  macros.lisp  plist_args.rs  tail-recursion.lisp
examples/scripts/: fib-fast.lisp
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs  parse_args.rs
src/: alist.rs  byte_compile.rs  cons.rs  context.rs  error.rs  eval.rs  lib.rs  lists.rs  macros.rs  main.rs  number.rs  object.rs  parse.rs  parser.rs  plist.rs  tulisp.pest  value.rs  value_enum.rs  value_ref.rs  vm.rs
src/builtin/: context.rs  functions.rs  macros.rs  mod.rs  prelude.lisp
src/builtin/functions/: arithmetic_operations.rs  common.rs  comparison_of_numbers.rs  comparison_of_strings.rs  conditionals.rs  core.rs  equality_predicates.rs  errors.rs  functions.rs  hash_table.rs  list_elements.rs  mod.rs  sequences.rs  time_operations.rs
src/builtin/functions/numbers/: arithmetic_operations.rs  comparison_of_numbers.rs  math.rs  mod.rs  rounding_operations.rs
src/byte_compile/: byte_compile.rs  mod.rs
src/byte_compile/forms/: arithmetic_operations.rs  common.rs  comparison_of_numbers.rs  conditionals.rs  list_elements.rs  mod.rs  other_functions.rs
src/bytecode/: bytecode.rs  instruction.rs  interpreter.rs  lambda_template.rs  mod.rs  stack_value.rs
src/bytecode/compiler/: compiler.rs  free_vars.rs  mod.rs
src/bytecode/compiler/forms/: arithmetic_operations.rs  common.rs  comparison_of_numbers.rs  conditionals.rs  lambda.rs  list_elements.rs  mod.rs  other_functions.rs  plist.rs  setting.rs
src/context/: add_function.rs  callable.rs  plist.rs  rest.rs
src/eval/: eval_into.rs
src/object/: arc_rwlock.rs  conversions.rs  rc_refcell.rs  wrappers.rs
src/tests/: mod.rs  tests.rs
tests/: bad-load.lisp  good-load.lisp  tests.rs
tulisp-fmt/: Cargo.toml  README.md
tulisp-fmt/src/: cst.rs  lex.rs  lib.rs  parse.rs  render.rs
tulisp-fmt/tests/: parity.rs  tests.rs
