[package]
name = "tulisp"
description = "An embeddable lisp interpreter."
version = "0.16.1"
repository = "https://github.com/shsms/tulisp"
license = "GPL-3.0"
edition = "2021"
keywords = ["lisp", "scripting", "emacs-lisp"]
categories = ["compilers", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tulisp"
path = "src/bin/tulisp.rs"

[lib]
name = "tulisp"
path = "src/lib.rs"

[dependencies]
tulisp-proc-macros = "0.4.1"
