[package]
name = "tulisp"
description = "An embeddable lisp interpreter."
version = "0.22.0"
repository = "https://github.com/shsms/tulisp"
license = "GPL-3.0"
edition = "2024"
keywords = ["lisp", "scripting", "emacs-lisp"]
categories = ["compilers", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tulisp"
path = "src/bin/tulisp.rs"

[lib]
name = "tulisp"
path = "src/lib.rs"

[features]
big_functions = []
